POC/force-app/main/default/objects/Account/fields/account6QA6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QA6sense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/0/1208607285344507/1208664584187152/f</description>
    <inlineHelpText>The 6QA status of the account for the product.

The values are either:
1 = 6QA
0= Not 6QA</inlineHelpText>
    <label>6sense 6QA</label>
    <type>Checkbox</type>
</CustomField>