POC/force-app/main/default/objects/Account/fields/account6QAAgeInDays6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QAAgeInDays6sense__c</fullName>
    <description>https://app.asana.com/0/1208607285344507/1208664584187152/f</description>
    <inlineHelpText>Days the account has been in 6QA status.</inlineHelpText>
    <label>6sense Account 6QA Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>