POC/force-app/main/default/objects/Account/fields/account6QAEndDate6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QAEndDate6sense__c</fullName>
    <description>https://app.asana.com/0/1208607285344507/1208664584187152/f</description>
    <inlineHelpText>The date the account was disqualified from 6QA status (YYYY-MM-DD).</inlineHelpText>
    <label>6sense Account 6QA End Date</label>
    <type>Date</type>
</CustomField>