POC/force-app/main/default/objects/Account/fields/Account_1d28_Utilization_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Account_1d28_Utilization_Enriched__c</fullName>
    <description>Account Utilization % calculated directly from SFDC pipeline. Calculated as users_visited_1d28 / users on an account&#39;s premium plans https://app.asana.com/0/193922247701627/1199585177038744</description>
    <label>Account 1d28 Utilization (Enriched)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>