POC/force-app/main/default/objects/Account/fields/Account_Hierarchy_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Hierarchy_Sales_Region__c</fullName>
    <description>The Sales Region of this account&#39;s Ultimate Parent, or its own if it has no parent
https://app.asana.com/0/1199543532541045/1204264701751391/f</description>
    <formula>IF (UltimateParentAccount__c = NULL, TEXT(Sales_Region__c), TEXT(UltimateParentAccount__r.Sales_Region__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Sales Region of this account&#39;s Ultimate Parent, or its own if it has no parent</inlineHelpText>
    <label>Account Hierarchy Sales Region</label>
    <type>Text</type>
</CustomField>