POC/force-app/main/default/objects/Account/fields/Account_Hierarchy_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Account_Hierarchy_Subregion__c</fullName>
    <description>The Subregion of this account&#39;s Ultimate Parent, or its own if it has no parent
https://app.asana.com/0/1199543532541045/1204264701751391/f</description>
    <formula>IF (UltimateParentAccount__c = NULL, TEXT(Subregion__c ), TEXT(UltimateParentAccount__r.Subregion__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Subregion of this account&#39;s Ultimate Parent, or its own if it has no parent</inlineHelpText>
    <label>Account Hierarchy Subregion</label>
    <type>Text</type>
</CustomField>