POC/force-app/main/default/objects/Account/fields/Account_Intelligence_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Intelligence_Link__c</fullName>
    <description>https://app.asana.com/0/253313814113822/1203068712460476/f</description>
    <formula>HYPERLINK(&quot;https://prod-useast-a.online.tableau.com/#/site/asana/views/AccountIntelligenceDashboard_16637933837850/UserInsights?:iid=9&amp;Account%20Name=&quot;&amp;Name , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Intelligence Link</label>
    <type>Text</type>
</CustomField>