POC/force-app/main/default/objects/Account/fields/Account_Landed_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Landed_Date__c</fullName>
    <description>Indicates the date of Revenue Session which moved an entity over the 10k threshold (https://app.asana.com/0/1200340081332764/1203673014828786)</description>
    <inlineHelpText>Indicates the date of Revenue Session which moved an entity over the 10k threshold</inlineHelpText>
    <label>Account Landed Date</label>
    <type>Date</type>
</CustomField>