POC/force-app/main/default/objects/Account/fields/Account_on_EU_Data_Center__c.field-meta.xml
<CustomField>
    <fullName>Account_on_EU_Data_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked to true, indicates and Account is on the EU Data Center. Manually set by Sales Ops until pipeline can be updated to set. Reference: https://app.asana.com/0/1132572100452632/1152066490471481/f</description>
    <inlineHelpText>When checked to true, indicates and Account is on the EU Data Center.</inlineHelpText>
    <label>Account on EU Data Center</label>
    <type>Checkbox</type>
</CustomField>