POC/force-app/main/default/objects/Account/fields/Account_Origin__c.field-meta.xml
<CustomField>
    <fullName>Account_Origin__c</fullName>
    <description>Indicates whether this customer was originally sourced by the partner or was a lead or customer originally sourced by Asana (https://app.asana.com/0/1169811029711865/1193323731816270)</description>
    <inlineHelpText>Indicates whether this customer was originally sourced by the partner or was a lead or customer originally sourced by Asana</inlineHelpText>
    <label>Account Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asana Sourced</fullName>
            </value>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>