POC/force-app/main/default/objects/Account/fields/Account_Overage__c.field-meta.xml
<CustomField>
    <fullName>Account_Overage__c</fullName>
    <description>https://app.asana.com/0/515645212208478/1206873802382131/f</description>
    <formula>internal_users__c  -  paid_seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between Internal Users and Total Paid Seats</inlineHelpText>
    <label>Account Overage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>