POC/force-app/main/default/objects/Account/fields/Account_Owner_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Code__c</fullName>
    <description>Owner&#39;s Revenue Code as listed on their User record
https://app.asana.com/0/253313814113822/1200493559480321/f</description>
    <formula>Owner.RevenueCode__c</formula>
    <label>Account Owner Code</label>
    <type>Text</type>
</CustomField>