POC/force-app/main/default/objects/Account/fields/Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Manager__c</fullName>
    <description>https://app.asana.com/0/515645212208478/1206675235184970/f</description>
    <formula>Owner.Manager.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Manager</label>
    <type>Text</type>
</CustomField>