POC/force-app/main/default/objects/Account/fields/Account_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Region__c</fullName>
    <description>Owner&#39;s Revenue Region as listed on their User record
https://app.asana.com/0/253313814113822/1200493559480321/f</description>
    <formula>TEXT(Owner.RevenueRegion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Region</label>
    <type>Text</type>
</CustomField>