POC/force-app/main/default/objects/Account/fields/Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role__c</fullName>
    <description>Owner&#39;s Role as listed on their User record
https://app.asana.com/0/1123979735231855/1147183565920262/f</description>
    <formula>TEXT(Owner.Business_Function__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Role</label>
    <type>Text</type>
</CustomField>