POC/force-app/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <description>Account score (https://app.asana.com/0/1169811029711865/1200547287259874)</description>
    <label>Account Score</label>
    <length>4</length>
    <type>Text</type>
</CustomField>