POC/force-app/main/default/objects/Account/fields/Account_Seat_Upside__c.field-meta.xml
<CustomField>
    <fullName>Account_Seat_Upside__c</fullName>
    <description>Employee Size minus the number of paid seats</description>
    <formula>NumberOfEmployees - paid_seats__c</formula>
    <inlineHelpText>Employee Size minus the number of paid seats</inlineHelpText>
    <label>Account Seat Upside</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>