POC/force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>https://app.asana.com/0/1202710080826437/1204252478178685/f</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive (Out of Business)</fullName>
            </value>
            <value>
                <fullName>Inactive (M&amp;A)</fullName>
            </value>
            <value>
                <fullName>Inactive (Duplicate)</fullName>
            </value>
            <value>
                <fullName>Inactive (Missing or Bad Website)</fullName>
            </value>
            <value>
                <fullName>Inactive (Other)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>