POC/force-app/main/default/objects/Account/fields/accountBuyingStage6sense__c.field-meta.xml
<CustomField>
    <fullName>accountBuyingStage6sense__c</fullName>
    <description>https://app.asana.com/0/1208607285344507/1208664584187152/f
The categorical representation of the measure of how much an account is behaving like accounts with which there is a history of previously opened opportunities.

Target: The buyer may not realize a problem exists, but may fit within the seller’s TAM.

Awareness: The buyer realizes they have a problem. The buyer is doing educational research to more clearly understand, frame, and identify their problem.

Consideration: The buyer defines their problem and researches options to solve it. The buyer is researching all of the available options to solve the defined problem.

Decision: The buyer chooses a solution. The buyer is narrowing a list of potential vendors to ultimately make a purchase decision.

Purchase: The buyer commits to a specific solution and justifies the reasons for the purchase.</description>
    <inlineHelpText>The categorical representation of the measure of how much an account is behaving like accounts with which there is a history of previously opened opportunities.</inlineHelpText>
    <label>6sense Account Buying Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>