POC/force-app/main/default/objects/Account/fields/accountNumericalReachScore6sense__c.field-meta.xml
<CustomField>
    <fullName>accountNumericalReachScore6sense__c</fullName>
    <description>https://app.asana.com/0/1208607285344507/1208664584187152/f</description>
    <inlineHelpText>A measure, between 0 and 100, represents 6sense’s current assessment of your team’s outreach on the account in comparison to the other accounts where opportunities were won previously.</inlineHelpText>
    <label>6sense Account Numerical Reach Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>