POC/force-app/main/default/objects/Account/fields/AccountPOV__c.field-meta.xml
<CustomField>
    <fullName>AccountPOV__c</fullName>
    <label>AccountPOV</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>