POC/force-app/main/default/objects/Account/fields/accountProfileFit6sense__c.field-meta.xml
<CustomField>
    <fullName>accountProfileFit6sense__c</fullName>
    <description>https://app.asana.com/0/1208607285344507/1208664584187152/f</description>
    <inlineHelpText>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</inlineHelpText>
    <label>6sense Account Profile Fit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>