POC/force-app/main/default/objects/Account/fields/accountUpdateDate6sense__c.field-meta.xml
<CustomField>
    <fullName>accountUpdateDate6sense__c</fullName>
    <description>https://app.asana.com/0/1208607285344507/1208664584187152/f</description>
    <inlineHelpText>The latest update date and time when 6sense Scores were updated.</inlineHelpText>
    <label>6sense Account Update Date</label>
    <type>Date</type>
</CustomField>