POC/force-app/main/default/objects/Account/fields/AccountUserID__c.field-meta.xml
<CustomField>
    <fullName>AccountUserID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>AccountUserID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_UserID</relationshipName>
    <type>Lookup</type>
</CustomField>