POC/force-app/main/default/objects/Account/fields/Activated_Contract_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Contract_Change_Date__c</fullName>
    <description>https://app.asana.com/0/1203315724044772/1206411967087339/f</description>
    <label>Activated Contract Change Date</label>
    <type>DateTime</type>
</CustomField>