POC/force-app/main/default/objects/Account/fields/Active_ELA_Contract__c.field-meta.xml
<CustomField>
    <fullName>Active_ELA_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/0/0/1204635531895689/f</description>
    <inlineHelpText>Evaluates to True if there&#39;s a related contract with Active Contract = 1 and Deal Structure = ELA</inlineHelpText>
    <label>Active ELA Contract</label>
    <type>Checkbox</type>
</CustomField>