POC/force-app/main/default/objects/Account/fields/Active_FSP__c.field-meta.xml
<CustomField>
    <fullName>Active_FSP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/1/15793206719/project/1204573690586060/task/1209486631974386</description>
    <label>Active FSP</label>
    <type>Checkbox</type>
</CustomField>