POC/force-app/main/default/objects/Account/fields/AE_Suggested_Play__c.field-meta.xml
<CustomField>
    <fullName>AE_Suggested_Play__c</fullName>
    <description>AE&#39;s suggested sales motion in account https://app.asana.com/0/253313814113822/1202780018364502/f</description>
    <label>AE Suggested Motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expand within Department</fullName>
            </value>
            <value>
                <fullName>Expand to New Department</fullName>
            </value>
            <value>
                <fullName>Wall-to-Wall</fullName>
            </value>
            <value>
                <fullName>First Monetization Event</fullName>
            </value>
            <value>
                <fullName>Top Down/wall-to-wall</fullName>
                <isActive>false</isActive>
                <label>Top Down/wall-to-wall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>