POC/force-app/main/default/objects/Account/fields/AI_Studio_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AI_Studio_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/1/15793206719/project/1209121380111720/task/1209072285765225?focus=true</description>
    <label>AI Studio Enabled</label>
    <type>Checkbox</type>
</CustomField>