POC/force-app/main/default/objects/Account/fields/AI_Studio_First_Call_Deck__c.field-meta.xml
<CustomField>
    <fullName>AI_Studio_First_Call_Deck__c</fullName>
    <description>URL to First Call Deck generated by Workato.

https://app.asana.com/1/15793206719/project/1213007451667626/task/1213644923156023?focus=true</description>
    <label>AI Studio First Call Deck</label>
    <type>Url</type>
</CustomField>