POC/force-app/main/default/objects/Account/fields/AI_Studio_First_Call_Deck_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_Studio_First_Call_Deck_Generated_Date__c</fullName>
    <description>Timestamp of when First Call Deck was generated.

https://app.asana.com/1/15793206719/project/1213007451667626/task/1213644923156023?focus=true</description>
    <label>AI Studio First Call Deck Generated Date</label>
    <type>DateTime</type>
</CustomField>