POC/force-app/main/default/objects/Account/fields/AI_Studio_Needs_First_Call_Deck__c.field-meta.xml
<CustomField>
    <fullName>AI_Studio_Needs_First_Call_Deck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag determining whether First Call Deck Needs to be generated by Workato.

https://app.asana.com/1/15793206719/project/1213007451667626/task/1213644923156023?focus=true</description>
    <label>AI Studio Needs First Call Deck</label>
    <type>Checkbox</type>
</CustomField>