POC/force-app/main/default/objects/Account/fields/Annual_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Range__c</fullName>
    <description>https://app.asana.com/0/1169811029711865/1200579638541754/f</description>
    <label>Annual Revenue Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>