POC/force-app/main/default/objects/Account/fields/API_ID__c.field-meta.xml
<CustomField>
    <fullName>API_ID__c</fullName>
    <description>Converts a 15-character ID into a case insensitive 18-character ID for API use.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Case Safe ID</label>
    <type>Text</type>
</CustomField>