POC/force-app/main/default/objects/Account/fields/ARR_Buckets__c.field-meta.xml
<CustomField>
    <fullName>ARR_Buckets__c</fullName>
    <description>https://app.asana.com/0/1206954742081993/1207277866810692/f</description>
    <label>ARR Buckets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0-$2,000</fullName>
            </value>
            <value>
                <fullName>$2,001-$4,999</fullName>
            </value>
            <value>
                <fullName>$5,000-$9,999</fullName>
            </value>
            <value>
                <fullName>$10,000-$11,999</fullName>
            </value>
            <value>
                <fullName>$12,000-$24,999</fullName>
            </value>
            <value>
                <fullName>$25,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>