POC/force-app/main/default/objects/Account/fields/ARR_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>ARR_Change_Date__c</fullName>
    <description>https://app.asana.com/0/1203315724044772/1206411967087339/f</description>
    <label>ARR Change Date</label>
    <type>DateTime</type>
</CustomField>