POC/force-app/main/default/objects/Account/fields/ARS_Bucket__c.field-meta.xml
<CustomField>
    <fullName>ARS_Bucket__c</fullName>
    <description>https://app.asana.com/0/1199207275557939/1207438697751829/f</description>
    <inlineHelpText>Derived by the Retention Score - indicates the likelihood to retain a particular customer.</inlineHelpText>
    <label>Retention Bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>