POC/force-app/main/default/objects/Account/fields/ARS_Negative_Reasons__c.field-meta.xml
<CustomField>
    <fullName>ARS_Negative_Reasons__c</fullName>
    <description>https://app.asana.com/0/1199207275557939/1207438697751829/f</description>
    <inlineHelpText>Qualitative reasons that describe why an account may not be retained.</inlineHelpText>
    <label>Retention Negative Reasons</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>