POC/force-app/main/default/objects/Account/fields/Asana_apps_within_TechStack__c.field-meta.xml
<CustomField>
    <fullName>Asana_apps_within_TechStack__c</fullName>
    <description>Apps this Account uses that can integrate with Asana. Zoom Managed App and configured and mapped within Zoom Clean Setting. Read Only for Entire Org (https://app.asana.com/0/1169811029711865/1200455414241241)</description>
    <inlineHelpText>Apps this Account uses that can integrate with Asana</inlineHelpText>
    <label>Asana apps within TechStack</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>