POC/force-app/main/default/objects/Account/fields/Asana_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Asana_Customer_Type__c</fullName>
    <description>Replacing the &#39;Is_Paid_Customer__c&#39; checkbox field with a picklist field. This field will be used to filter in ZoomInfo (https://app.asana.com/0/1201094413545035/1202125619280455)</description>
    <label>Asana Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Paid Asana Customer</fullName>
                <default>true</default>
                <label>Not a Paid Asana Customer</label>
            </value>
            <value>
                <fullName>Paid Asana customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>