POC/force-app/main/default/objects/Account/fields/Asana_for_Startups__c.field-meta.xml
<CustomField>
    <fullName>Asana_for_Startups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/0/515645212208478/1206341295967759/f</description>
    <inlineHelpText>Account is part of the Asana for Startup program.</inlineHelpText>
    <label>Asana for Startups</label>
    <type>Checkbox</type>
</CustomField>