POC/force-app/main/default/objects/Account/fields/Asana_Gov_Partner__c.field-meta.xml
<CustomField>
    <fullName>Asana_Gov_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox if the partner is part of the Asana Gov program.
https://app.asana.com/1/15793206719/project/1209914336144646/task/1210467476045660?focus=true</description>
    <inlineHelpText>Select this checkbox if the partner is part of the Asana Gov program</inlineHelpText>
    <label>Asana Gov Partner</label>
    <type>Checkbox</type>
</CustomField>