POC/force-app/main/default/objects/Account/fields/Asana_Identified_Partner_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Asana_Identified_Partner_Relationship__c</fullName>
    <description>Potential partner relationship identified through customer interaction https://app.asana.com/0/1206411435319312/1207626568435418/f</description>
    <inlineHelpText>Potential partner relationship identified through customer interaction</inlineHelpText>
    <label>Asana Identified Partner Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>