POC/force-app/main/default/objects/Account/fields/Asana_Task_Link__c.field-meta.xml
<CustomField>
    <fullName>Asana_Task_Link__c</fullName>
    <description>Used to manually relate Asana tasks to this account in places where the Asana integration does not satisfy use cases
https://app.asana.com/0/1200688953913592/1202129485029885/f</description>
    <label>Asana Task Link</label>
    <type>Url</type>
</CustomField>