POC/force-app/main/default/objects/Account/fields/At_Risk_Renewal__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://app.asana.com/1/15793206719/project/1207723732027412/task/1211940193616601?focus=true</description>
    <label>At-Risk Renewal</label>
    <type>Checkbox</type>
</CustomField>