POC/force-app/main/default/objects/Account/fields/AWS_Integration__c.field-meta.xml
<CustomField>
    <fullName>AWS_Integration__c</fullName>
    <description>https://app.asana.com/0/1202771858774857/1206853523875445/f</description>
    <inlineHelpText>This field denotes the AWS Integrations this Account uses that can integrate with Asana</inlineHelpText>
    <label>AWS Tech Stack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>