POC/force-app/main/default/objects/Account/fields/Best_Case__c.field-meta.xml
<CustomField>
    <fullName>Best_Case__c</fullName>
    <description>CS Forecasting best case ARR for this FQ (https://app.asana.com/0/1169811029711865/1202636412362984)</description>
    <inlineHelpText>The highest ARR this account might have at the end of the current fiscal quarter</inlineHelpText>
    <label>Best Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>