POC/force-app/main/default/objects/Account/fields/Beta_Contact_OK__c.field-meta.xml
<CustomField>
    <fullName>Beta_Contact_OK__c</fullName>
    <description>If Yes, User Experience Research can reach out to users in domain to ask about beta participation.  Set by CSM.
https://app.asana.com/0/1202710080826437/1204110080862596/f</description>
    <inlineHelpText>OK for UXR to reach out to users in this domain about beta participation, and allowed for by contract?</inlineHelpText>
    <label>Beta Contact OK?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>