POC/force-app/main/default/objects/Account/fields/Billing_Address_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Refresh_Date__c</fullName>
    <description>https://app.asana.com/0/1202710080826437/1204894558785374/f</description>
    <inlineHelpText>Date when the billing addressed was identified using the enrichment source</inlineHelpText>
    <label>Billing Address Refresh Date</label>
    <type>DateTime</type>
</CustomField>